# Scan-Image-Classifier

./: CMakeLists.txt  README.md  README.txt
ImageResult/accident/: accident_000_00_00.txt  accident_000_00_01.txt  accident_000_00_02.txt  accident_000_00_03.txt  accident_000_00_04.txt  accident_000_02_00.txt  accident_000_02_01.txt  accident_000_02_02.txt  accident_000_02_03.txt  accident_000_02_04.txt  accident_000_04_00.txt  accident_000_04_01.txt  accident_000_04_02.txt  accident_000_04_03.txt  accident_000_04_04.txt  accident_000_06_00.txt  accident_000_06_01.txt  accident_000_06_02.txt  accident_000_06_03.txt  accident_000_06_04.txt  accident_000_08_00.txt  accident_000_08_01.txt  accident_000_08_02.txt  accident_000_08_03.txt  accident_000_08_04.txt  accident_000_10_00.txt  accident_000_10_01.txt  accident_000_10_02.txt  accident_000_10_03.txt  accident_000_10_04.txt  accident_000_11_00.txt  accident_000_11_01.txt  accident_000_11_02.txt  accident_000_11_03.txt  accident_000_11_04.txt
ImageResult/bomb/: bomb_000_00_10.txt  bomb_000_00_11.txt  bomb_000_00_12.txt  bomb_000_00_13.txt  bomb_000_00_14.txt  bomb_000_02_10.txt  bomb_000_02_11.txt  bomb_000_02_12.txt  bomb_000_02_13.txt  bomb_000_02_14.txt  bomb_000_04_10.txt  bomb_000_04_11.txt  bomb_000_04_12.txt  (+22 more)
include/: SizeDetector.h  SquareExtractor.h  connected.h  cross_detector.h  matcher.h  reformat_image.h  textscan.h  thresholding.h
src/: Main.cpp  SizeDetector.cpp  SquareExtractor.cpp  clean.sh  connected.cpp  cross_detector.cpp  matcher.cpp  reformat_image.cpp  textscan.cpp  thresholding.cpp
(+345 files in other folders)
